# gitstats

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
gitstats/: __init__.py  cli.py  parser.py
