[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitstats"
version = "0.1.0"
description = "Beautiful git statistics in your terminal"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Milan Loncarevic" }
]
keywords = ["git", "statistics", "cli", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
gitstats = "gitstats.cli:app"

[project.urls]
Homepage = "https://github.com/mloncarevich/gitstats"
Repository = "https://github.com/mloncarevich/gitstats"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
